k8s/jobs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-service
  template:
    metadata:
      labels:
        app: jobs-service
    spec:
      containers:
        - name: jobs-container
          image: <your-ecr-url>/jobs-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: jobs-service
spec:
  selector:
    app: jobs-service
  ports:
    - port: 80
      targetPort: 5000
